added test for creating new location

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.error.include-message=always
+spring.datasource.url=jdbc:postgresql://localhost:7436/location
+spring.datasource.username=admin
+spring.datasource.password=pass123
+spring.datasource.driver-class-name=org.postgresql.Driver
+# each time creates DB from scratch
+spring.jpa.hibernate.ddl-auto=create
+# show SQL from JPA do DB
+spring.jpa.show-sql=false
