--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # each time creates DB from scratch
 spring.jpa.hibernate.ddl-auto=create
 # show SQL from JPA do DB
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
